package br.furb.adapter.arcondicionado

enum TipoArCondicionado:
    case GellaKaza
    case VentoBaumn
