package br.furb.adapter.lampada

enum TipoLampada {
    case ShoyouMi
    case Phelippes
}