package br.furb.adapter.persiana

trait Persiana {
    def subir(): Unit
    def descer(): Unit
    def estaAberta(): Boolean
}
