package br.furb.adapter.persiana

enum TipoPersiana {
    case NatLight
    case Solarius
}